# FusionFrame-Engine

./: .gitignore  2D_Graphic_Engine_Kagan_Pavlo.sln  CMakeLists.txt  Fusion_Frame_2D_Graphic_Engine.sln  Fusion_Frame_Engine.sln  README.md
2D_Graphic_Engine_Kagan_Pavlo/: 2D_Graphic_Engine_Kagan_Pavlo.vcxproj  2D_Graphic_Engine_Kagan_Pavlo.vcxproj.filters  Buffer.h  Camera.h  Initialize.h  Main.cpp  Mesh.cpp  Mesh.h  SDL_CUSTOM.cpp  SDL_CUSTOM.hpp  SDL_camera.hpp  SDL_camera2d.hpp  Shader.cpp  Texture.cpp
2D_Graphic_Engine_Kagan_Pavlo/Shaders/: Basic.fs  Basic.vs
Fusion_Frame_2D_Graphic_Engine/: Application.cpp  Application.hpp  Bone.cpp  Bone.hpp  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Collision.hpp  Color.hpp  DrawingFunctions.cpp  DrawingFunctions.hpp  Engine.hpp  Framebuffer.hpp  FusionFrame.cpp  FusionFrame.h  Fusion_Frame_2D_Graphic_Engine.filters  Fusion_Frame_2D_Graphic_Engine.vcxproj  Fusion_Frame_2D_Graphic_Engine.vcxproj.filters  Initialize.cpp  Light.cpp  Light.hpp  Main.cpp  Material.hpp  Mesh.cpp  Mesh.h  Meshhhh.h  Model.cpp  Model.h  Model.hpp  Object.cpp  Object.hpp  Physics.cpp  Physics.hpp  SDL_CUSTOM.cpp  SDL_CUSTOM.hpp  SSLS.hpp  Shader.h  ShadowMaps.hpp  Texture.h
Fusion_Frame_2D_Graphic_Engine/FusionOpengl/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  Bone.cpp  Bone.hpp  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Color.cpp  Color.hpp  Cubemap.cpp  Cubemap.h  DrawingFunctions.cpp  DrawingFunctions.hpp  Framebuffer.hpp  HalfEdge.cpp  HalfEdge.hpp  Light.cpp  Light.hpp  (+18 more)
Fusion_Frame_Engine/: Application.cpp  Application.hpp  FusionFrame.cpp  FusionFrame.h  Fusion_Frame_Engine.vcxproj  Fusion_Frame_Engine.vcxproj.filters  Main.cpp  Scene.hpp
src/: Application.cpp  Application.hpp  FusionFrame.h  FusionFrameEngine.exp  FusionFrameEngine.lib  Hashing.hpp  Main.cpp  imgui.ini
(+284 files in other folders)
